hphp/test/zend/good/Zend/tests/generators/clone.php
<?php

function gen() {
    yield;
}

$gen = gen();
clone $gen;

?>