hphp/test/zend/bad/Zend/tests/generators/errors/non_ref_generator_iterated_by_ref_error.php
<?php

function gen() { yield; }

$gen = gen();
foreach ($gen as &$value) { }

?>